@@ -1,5 +1,11 @@
 2008-02-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw.c: (murrine_draw_button):
+	* src/murrine_draw_rgba.c: (murrine_rgba_draw_button):
+	That was part of the last commit :)
+
+2008-02-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/murrine_style.c: (murrine_style_draw_box):
 	Fixed menubaritems with menubaritemstyle = 1.
 	Bye bye Murrine, see you in April :)
